--- a/home.css
+++ b/home.css
@@ -1,21 +1,20 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 *{
-
     padding: 0%;
     margin: 0%;
 }
 .main-content{
- 
 background-image: url(home-background.png);
 background-size: cover;
 }
 h1, h2, h3 {
     color: rgb(255, 255, 255); /* Text color */
- 
     font-family: 'Montserrat', sans-serif;
 }
-
+li{
+    padding: 3px;
+}
 .sidebar ul{
     display: flex;
     height: 10vh;
@@ -45,7 +44,6 @@ h1, h2, h3 {
     padding-top: 5px;
     padding-bottom: 5px;
     font-size: x-large;
-    
     }
 .sidebar ul li a:hover {
     transform: scale(1.05);
